--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "cd server && node index.js"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.4",
     "@capacitor/cli": "^7.4.4",
     "@capacitor/core": "^7.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "leaflet": "^1.9.4",
+    "pg": "^8.11.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "sqlite3": "^5.1.7",
     "vite-plugin-pwa": "^1.1.0"
   },
   "devDependencies": {
